deployment-autoscaling.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-autoscaling
  labels:
    app: my-application
    env: prod
    owner: MyOwner
spec:
  replicas: 2
  # Выбираем поды, с которыми будет работать деплоймент. Поды мы создадим ниже
  selector:
    matchLabels:
      project: my-project-3
  # Здесь мы создаём наши поды
  template:
    metadata:
      # Лейблы, которые мы привязываем к подам
      labels:
        project: my-project-3
    # Спецификация нашего пода (какие контейнеры создаём)
    spec:
      containers:
        - name: my-web-container-2
          image: nginx:latest
          ports:
            - containerPort: 80


# Добавляем автоскейлинг
