pod-myweb-lite.yml
# Указываем API-версию (обязательный параметр)
apiVersion: v1
# Указываем тип создаваемой сущности
kind: Pod
metadata:
  # Имя пода
  name: my-web
spec:
  # Указываем контейнеры текущего пода
  containers:
    # Название контейнера и откуда скачать контейнер (его название и версию)
    - name: container-apache
      image: httpd:latest
