pod-myweb-ver2.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-web
  labels:
    env: prod
    app: main
    tier: frontend
    owner: MyName
spec:
  containers:
    - name: container-nginx
      image: nginx:latest
      ports:
        - containerPort: 80

    - name: container-tomcat
      image: tomcat:8.5.38
      ports:
        - containerPort: 8080
