service-loadbalancer-autoscaling.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-autoscaling
  labels:
    app: my-k8s-deployment
spec:
  selector:
    matchLabels:
      project: my-project-3
  template:
    metadata:
      labels:
        project: my-project-3
    spec:
      containers:
        - name: my-web-2
          image: nginx:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: my-autoscaling-pod-service
  labels:
    env: prod
    owner: MyOwner
spec:
  selector:
    project: my-project-3
  ports:
    - name: app-listener
      protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
